--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+.sticky_header{
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 99999999999;
+  box-shadow: 3px 3px -8px 3px #ddd;
+  background:rgba(60, 58, 58, 0.568);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-animation {
+  animation: animate2 5s linear infinite;
+  outline: none;
+ color:#fff;
 }
+@keyframes animate2 {
+  0%, 18% , 20% , 50.1% , 60% , 65.1% , 80% , 90.1% , 92%{
+    color: #969797;
+    text-shadow: none;
+  }
+  18.1%,20.1%, 30% , 50% , 60.1% ,65%, 65.1%, 100%{
+    color: #fff;
+    /* box-shadow: 0 0 10px #03bcf4; */
+    text-shadow: 0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 40px #fff,
+    0 0 60px #fff,
+    0 0 80px #fff,
+    0 0 160px #fff,
+  }
+  
+}
+@media only screen and (max-width:768px){
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .navigation{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background: #00000084;
+    display: none;
+  }
+  .menu{
+    
+    width: 15rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background:#434040b1;
+    z-index: 200;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 30px;
+  }
+  .show_menu{
+    display: block;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scrollbar{
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.disableButton{
+  opacity: 0.7; /* Lower opacity for disabled button */
+  background-color: #ccc;
+  cursor: not-allowed;
 }
